Fix spacing in lineage node

--- a/openmetadata-ui/src/main/resources/ui/src/components/Entity/EntityLineage/custom-node.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/Entity/EntityLineage/custom-node.less
@@ -115,8 +115,14 @@
           padding: 8px 16px 0 16px;
 
           .entity-service-icon svg {
-            height: 28px;
-            width: 28px;
+            height: 32px;
+            width: 32px;
+            margin-bottom: 6px;
+          }
+          .entity-service-icon img {
+            height: 32px;
+            width: 32px;
+            margin-bottom: 6px;
           }
 
           &.with-footer::after {
